# skplatform

./: .gitignore  .gitlab-ci.yml  README.md  env.yml  pyproject.toml  setup.cfg
.github/workflows/: release.yml
conda.recipe/: meta.yaml
docs/source/: conf.py  index.rst  installation.rst
docs/source/_static/: sksoftware.css
docs/source/_templates/: layout.html  sidebarglobdoc.html
docs/source/api/: api_geodesy.rst  api_platform.rst  api_pointing_techniques.rst  api_posn_techniques.rst  api_roll_control.rst  api_satellites.rst  api_solar.rst  index.rst
docs/source/appendices/: index.rst  rotation_matrices.rst  tangentlimb.rst  transforms.rst
docs/source/intro/: high-level-interface.rst  index.rst  low-level-interface.rst  platforms_intro.rst
src/skplatform/: __init__.py  geodesy.py  solar.py
src/skplatform/celestialbodies/: celestialbody.py
src/skplatform/devs/: ali_atmosphere_curtain.py  technique_orbital_angle.py
src/skplatform/orientation_techniques/: __init__.py  orientation_techniques_core.py  standard_orientation_techniques.py
src/skplatform/platform/: __init__.py  optical_geometry.py  platform.py  platform_pointing.py  platformlocator.py  positionandorientationarray.py  rotationmatrix.py
src/skplatform/satellite/: coe.py  gibbs.py  satellite_simplegeostationary.py  satellitebase.py  satellitekepler.py  satellitemolniya.py  satellitesgp4.py  satellitesunsync.py
src/skplatform/solar_spectrum_impl/: fontela_uvis3micron.py  sao2010.py
src/skplatform/tests/: orbit_comparisons.py  orbit_test_data.py  test_geodetic.py  test_matrix.py  (+4 more)
(+2 files in other folders)
