# pyproject.toml
[project]
name = "skplatform"
description="Attitude solutions for optical, remote sensing instruments  flying on, or simulating, balloons, aircraft and satellites"
dependencies = ["numpy", "sktimeutils >= 2.0.9", "skconfig >= 0.3.5",  "sgp4 >= 2.9", "jplephem", "astropy"]
readme = "README.md"
license = {text = "MIT"}
authors=[{name='Nick Lloyd', email = "nick.lloyd@usask.ca"}]
dynamic = ["version"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/skplatform/_version.py"


